tests/test_struct/bad/nested.catala
## [Article]

```catala
new struct S:
  data x content S

new scope A:
  param y content S

scope A:
  def y := S { -- x: 1 }
```
